--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App{
+.App {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -6,12 +6,12 @@
   font-family: 'Source Sans 3', sans-serif;
 }
 
-.wrapper{
-  border: 1px solid red;
+.wrapper {
+  /* border: 1px solid red; */
   width: 500px;
 }
 
-h1{
+h1 {
   margin-top: 0;
   margin-botton: 10px;
 }
@@ -20,5 +20,5 @@ input:focus,
 select:focus,
 textarea:focus,
 button:focus {
-    outline: none;
+  outline: none;
 }
